--- a/landing.css
+++ b/landing.css
@@ -1,51 +1,84 @@
 .homepage{
     display: flex;
-    background-color: silver;width: 100%;
-    margin: 30px;
-}
-.home1{
-width: 60%;
-margin: auto;
-
+    width: 100%;
+    margin: auto;
+    height: 400px
 }
 
 .text {
-    font-size: large;
     font-style: inherit; 
     
 }
-.home1 button{
-    width: 300px;
-    padding: 50px;
-    border-radius: 20px;
-    margin: 20px;
-    color: lawngreen;
-    border: 0;
-    
-    
 
-
-}
-a {
-    text-decoration: none;
-    color: palevioletred;
-    
-}
-@media (max-width: 960px){
-.homepage {
-    display: flex;
+.home1 {
     width: 100%;
     margin: auto;
+    margin-top: 10px;
 }
+
+.page {
+    background-color: rgb(43, 226, 202);
 }
+
+h1 {
+    text-align: center;
+    font-family: helvetica;
+    padding-top: 150px;
+    padding-bottom: 100px;
+    color: white;
+    text-decoration: overline;
+    text-transform: uppercase;
+}
+
+.home1 button{
+    width: 70%;
+    padding: 40px;
+    border-radius: 10px;
+    margin: auto;
+    margin-left: 100px;
+    text-transform: uppercase;
+    font-size: 17px;
+    border: 0;
+ }
+     
+a {
+    text-decoration: none;
+    color: rgb(90, 90, 90);
+}
+
+@media (max-width: 960px){
+.homepage {
+    display: block;
+    }
+}
+
+
 @media (max-width: 960px) {
     .homepage img {
         width: 100%;
-
     }
-    /* .home1 { */
-        /* width: 100%; */
-        /* margin: 100px; */
-        /* padding: 50px; */
+     .home1 { 
+         width: 90%; 
+         margin: auto;
+         margin-bottom: 20px; 
+         margin-left: 50px;  
+    }
+}
+
+@media (max-width: 780px) {
+     .home1 { 
+         width: 100%; 
+         margin: auto;
+         margin-bottom: 20px;  
+         margin-left: 0;
+    }
+}
+
+@media (max-width: 550px){
+    .home1 {
+        width: 100%; 
+         margin: auto;
+         margin-bottom: 20px;
+        margin-left: -50px;
     }
 }
